--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
       "pre-commit": "lint-staged"
     }
   },
+  "engines": {
+    "node": "16.x"
+  },
   "lint-staged": {
     "*.{js,jsx}": [
       "eslint --fix",
